--- a/quotes-client/src/app/home/home.component.html
+++ b/quotes-client/src/app/home/home.component.html
@@ -3,5 +3,5 @@
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
     </span>
     <br/>
-    <button mat-raised-button color="primary"> View All Quotes</button>
+    <button mat-raised-button color="primary" [routerLink]="['/quotes']" > View All Quotes</button>
 </div>
