--- a/quotes-client/src/app/quotes/quotes.component.html
+++ b/quotes-client/src/app/quotes/quotes.component.html
@@ -1,3 +1,7 @@
+<button mat-button color="primary" class="create-quote" [routerLink]="['/edit']">
+    <mat-icon>note_add</mat-icon>
+    Create Quote
+</button>
 <mat-card class="quotes-card" *ngFor="let quote of quotes | async">
     <mat-card-header>
         <div mat-card-avatar class="avatar" [ngStyle]="getRandomColor()">
@@ -13,7 +17,7 @@
         </p>
     </mat-card-content>
     <mat-card-actions class="quotes-action">
-        <button mat-button color="primary">Edit</button>
+        <button mat-button color="primary" [routerLink]="['/edit', quote._id]">Edit</button>
         <button mat-button color="warn">Delete</button>
     </mat-card-actions>
 </mat-card>
